force-app/main/default/objects/Kiva_Journal__c/Kiva_Journal__c.object-meta.xml
<CustomObject>
    <description>It is required to for each funded loan to have at least one journal entry
Information for a new journal is sent from MIS to PA2 via the API</description>
    <label>Kiva Journal</label>
    <nameField>
        <displayFormat>KJ-{000000}</displayFormat>
        <label>Kiva Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kiva Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>