force-app/main/default/objects/Kiva_Journal__c/fields/Date_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Entry__c</fullName>
    <description>When the information (initial body entry) was first written up. (Since it could be synced from the field)</description>
    <label>Date of Entry</label>
    <type>Date</type>
</CustomField>