force-app/main/default/objects/Kiva_Journal__c/fields/Date_synced_to_Kiva__c.field-meta.xml
<CustomField>
    <fullName>Date_synced_to_Kiva__c</fullName>
    <label>Date synced to Kiva</label>
    <type>Date</type>
</CustomField>