force-app/main/default/objects/Kiva_Journal__c/fields/Final_Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Final_Body_Text__c</fullName>
    <description>This is polished / translated body of the journal text</description>
    <label>Final Body Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>