force-app/main/default/objects/Kiva_Journal__c/fields/Initial_Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Initial_Body_Text__c</fullName>
    <description>This is the information from the field. (This could be cobbled together from other fields as well if we want procedurally generated content)</description>
    <label>Initial Body Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>