force-app/main/default/objects/Kiva_Journal__c/fields/Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Loan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This journal entry is under this Kiva loan record</description>
    <label>Kiva Loan</label>
    <referenceTo>Kiva_Loan__c</referenceTo>
    <relationshipLabel>Kiva Journals</relationshipLabel>
    <relationshipName>Kiva_Journals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>