force-app/main/default/objects/Kiva_Journal__c/fields/Kiva_Loan_Participation__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Loan_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kiva Loan Participation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only choose clients that are part of this loan</errorMessage>
        <filterItems>
            <field>Kiva_Loan_Participation__c.Kiva_Loan__c</field>
            <operation>equals</operation>
            <valueField>$Source.Kiva_Loan__c</valueField>
        </filterItems>
        <infoMessage>Choose a client that are part of this loan for the journal entry</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Kiva_Loan_Participation__c</referenceTo>
    <relationshipLabel>Kiva Journals</relationshipLabel>
    <relationshipName>Kiva_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>