force-app/main/default/objects/Kiva_Journal__c/fields/URL_for_Attached_Image__c.field-meta.xml
<CustomField>
    <fullName>URL_for_Attached_Image__c</fullName>
    <inlineHelpText>This has to be a publicly accessible link, or else you will have to manually upload it in PA2</inlineHelpText>
    <label>URL for Attached Image</label>
    <type>Url</type>
</CustomField>