force-app/main/default/objects/Kiva_Journal__c/fields/URL_for_confirmation__c.field-meta.xml
<CustomField>
    <fullName>URL_for_confirmation__c</fullName>
    <inlineHelpText>Click here to go to PA2 and confirm that this journal entry should be posted.</inlineHelpText>
    <label>URL for confirmation</label>
    <type>Url</type>
</CustomField>